<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">306远控</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="connect">Connect</string>
    <string name="touchpad">Touchpad</string>
    <string name="keyboard">Keyboard</string>
    <string name="file_transfer">File Transfer</string>
    <string name="file_download">File Download</string>
    <string name="media_player">Media Player</string>
    <string name="image_viewer">Image Viewer</string>
    <string name="presentation">Presentation</string>
    <string name="power_off">Power Off</string>
    <string name="help">Help</string>
    <string name="help_url">https://github.com/varunon9/Remote-Control-PC</string>
    <string name="action_help">Help</string>

    <string name="title_activity_touch_pad">TouchPad</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_music_control">MusicControl</string>
    <string name="left_click">LeftClick</string>
    <string name="right_click">RightClick</string>

</resources>
